CNS-150: dockerize lavad build
Update the Makefile and intorduce Dockerfile to improve lavad build.

Notable make targets (for all targets - see Makefile):

  make build			- local build (output in ./build/)
  make test			- run unit-tests
  make lint			- run the linter

  make docker-build		- only produce docker image (host arch)

  make reproducble-build	- build and produce docker images (all archs)
  make reproducble-build-amd64	- build and produce docker image (linux/amd64)
  make reproducble-build-arm64	- build and produce docker image (linux/arm64)

Other notable changes:

- See Makefile for options to turn on/off via LAVA_BUILD_OPTIONS variable
- Specifically, use LAVA_BUILD_OPTIONS="static" to build static binary

Also updated .dockerignore (notably, added .git/ to avoid the cost). Anyway,
the copy only affects the builder stage in docker - nothing is copied to the
final image.

Also updates .gitignote (primarily some cleanup).

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,12 @@
-vue/node_modules
-vue/dist
 release/
+build/
+vue/src/store/generated/
+vue/node_modules/
+vue/dist/
+scripts/vars/
+testutil/e2e/logs/
+testutil/debugging/
+.github/
+.git/
 .idea/
 .vscode/
-.DS_Store
-notes.txt
-vue/src/store/generated/*
-vue/src/store/generated/lavanet/lava/lavanet.lava.servicer/index.js
-vue/src/store/generated/lavanet/lava/lavanet.lava.servicer/index.ts
-vue/src/store/generated/lavanet/lava/lavanet.lava.servicer/module/index.d.ts
-vue/src/store/generated/lavanet/lava/lavanet.lava.servicer/module/index.js
-vue/src/store/generated/lavanet/lava/lavanet.lava.servicer/module/index.ts
-vue/src/store/generated/lavanet/lava/lavanet.lava.user/index.js
-vue/src/store/generated/lavanet/lava/lavanet.lava.user/index.ts
-vue/src/store/generated/lavanet/lava/lavanet.lava.user/module/index.d.ts
-vue/src/store/generated/lavanet/lava/lavanet.lava.user/module/index.js
-vue/src/store/generated/lavanet/lava/lavanet.lava.user/module/index.ts
-relayer/cmd/relayer/__debug_bin
-relayer/.env
-testutil/e2e/logs/
-ptnet/
-scripts/vars/
-testutil/debugging/
-ts-client/
